--- a/style/main.css
+++ b/style/main.css
@@ -329,10 +329,9 @@ hr {
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-  .tile.tile-4 .tile-inner {
-    background: #ede0c8;
+    background: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ejwnclxe-1672470512.jpg?crop=0.505xw:1.00xh;0,0&resize=640:*);
+    background-size: cover;
+    color: rgba(0,0,0,0);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
