--- a/style/main.css
+++ b/style/main.css
@@ -329,18 +329,14 @@ hr {
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
-    background: url(/img/2.jpg);
-    background-size: cover;
-    color: rgba(0,0,0,0);
+    background: #eee4da;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-   .tile.tile-4 .tile-inner {
-    background: url(/img/4.jpg);
-    background-size: cover;
-    color: rgba(0,0,0,0);
+  .tile.tile-4 .tile-inner {
+    background: #ede0c8;
+    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
-    background: url(/img/4.jpg);
-    background-size: cover;
-    color: rgba(0,0,0,0);
+    color: #f9f6f2;
+    background: #f2b179; }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: #f59563; }
