--- a/style/main.css
+++ b/style/main.css
@@ -330,9 +330,13 @@ hr {
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
     background: url(/img/2.jpg);
+    color:rgba(0,0,0,0);
+    background size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
     background: url(/img/4.jpg);
+    color:rgba(0,0,0,0);
+    background size: cover;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
