--- a/style/main.css
+++ b/style/main.css
@@ -331,11 +331,11 @@ hr {
   .tile.tile-2 .tile-inner {
     background: url(/img/2.jpg);
     color: rgba(0,0,0,0);
-    background-size: cover;
+    background-size: cover; }
   .tile.tile-4 .tile-inner {
     background: url(/img/4.jpg);
     color: rgba(0,0,0,0);
-    background-size: cover;
+    background-size: cover; }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: #f2b179; }
